@@ -29,6 +29,14 @@
 #define G_UNLIKELY(a) (a)
 #endif
 
+#ifndef G_MININT32
+#define G_MININT32 -2147483648
+#endif
+
+#ifndef G_MAXINT32
+#define G_MAXINT32 2147483647
+#endif
+
 #if DISABLE_LOGGING
 #define MINI_DEBUG(level,limit,code)
 #else
