@@ -1,3 +1,9 @@
+2008-03-05  Zoltan Varga  <vargaz@gmail.com>
+
+	* mini.h: Define G_MININT32/G_MAXINT32 if using an older glib version.
+
+	* cfold.c: Remove definition of G_MININT32 which is now in mini.h.
+
 2008-03-04  Zoltan Varga  <vargaz@gmail.com>
 
 	* mini-amd64.c (mono_arch_compute_omit_fp): Don't disable fp elimination for 
